Apply automatic intelij code style fixes